<resources>
    <string name="app_mode" translatable="false">Android-Edet</string>
    <string name="app_version" translatable="false">V.1.5</string>
    <string name="str_app_name">SAN ZEN</string>
    <string name="preference_name">saneforce.santrip.preferencefile</string>
    <string name="txt_tagging">Tagging</string>
    <string name="txt_doctor">Doctor</string>
    <string name="txt_chemist">Chemist</string>
    <string name="txt_stockist">Stockiest</string>
    <string name="txt_undr">Unlisted Doctor</string>
    <string name="txt_add_tag">Add Tag</string>
    <string name="txt_visit">Visit</string>
    <string name="view">View</string>
    <string name="search">Search</string>
    <string name="tag_add">Tagged Address</string>
    <string name="brand_name">Brand Name</string>
    <string name="rating">Rating</string>
    <string name="feedback">Feedback</string>
    <string name="timeline">Timeline</string>
    <string name="product_name">Product Name</string>
    <string name="stock">Stock</string>
    <string name="samples">Samples</string>
    <string name="rx">RX</string>
    <string name="rcpa">RCPA</string>
    <string name="cancel">Cancel</string>
    <string name="final_submit">Final Submit</string>
    <string name="final_submit_check_out">Final Submit / Check OUT</string>
    <string name="submit_check_out">Submit / Check OUT</string>
    <string name="input_name">Input Name</string>
    <string name="qty">Qty</string>
    <string name="name">Name</string>
    <string name="input">Input</string>
    <string name="add_rcpa">Add RCPA</string>
    <string name="pob_value">POB Value</string>
    <string name="enter_value">Enter Value</string>
    <string name="overall_feedback">Overall Feedback</string>
    <string name="overall_remarks">Overall Remarks</string>
    <string name="capture_event">Capture Event</string>
    <string name="add">Add</string>
    <string name="capture">Capture</string>
    <string name="joint_work">Joint Work</string>
    <string name="select">Select </string>
    <string name="reached_session_limit">Reached Session limit</string>
    <string name="you_have_select">You have selected the </string>
    <string name="select_any_masters">Select any masters in session </string>
    <string name="select_any">Select any </string>
    <string name="more_than_limit"> more than limits </string>
    <string name="in_session"> in session </string>
    <string name="rx_qty">RX Qty</string>
    <string name="add_product_input">Add Product/Input</string>
    <string name="add_sample_input">Add Sample/Input</string>
    <string name="add_input_amp_sample"><![CDATA[Add Input & Sample]]></string>
    <string name="add_input">Add Input</string>
    <string name="save">Save</string>
    <string name="add_sample">Add Sample</string>
    <string name="sample">Sample</string>
    <string name="edit">Edit</string>
    <string name="chemist_name">Chemist Name</string>
    <string name="our_prd_name">Our Product Name</string>
    <string name="rate">Rate</string>
    <string name="enter_qty">Enter Qty</string>
    <string name="value">Value</string>
    <string name="add_competitor">Add Competitor</string>
    <string name="competitor_company">Competitor Company</string>
    <string name="comp_brand">Competitor Brand</string>
    <string name="remarks">Remarks</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="category">Category</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="str_app_configuration">App Configuration</string>
    <string name="str_web_url">Web URL</string>
    <string name="str_license_key">License Key</string>
    <string name="str_enter_url">Enter Web URL</string>
    <string name="str_enter_license">Enter License Key</string>
    <string name="str_language">Language</string>
    <string name="str_your_device_id">Your Device ID</string>
    <string name="str_save_settings">Save Settings</string>
    <string name="str_powered_by">Powered by</string>
    <string name="call_selection">Call Selection</string>
    <string name="highlights_selected_hq">Highlights selected HQ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_submit"><![CDATA[Skip & Submit]]></string>
    <string name="start_detaling">Start Detailing</string>
    <string name="filter_by">Filter by</string>
    <string name="loc_not_detect"> Location cannot detected </string>
    <string name="loc_setting">Please enable the location</string>
    <string name="tagged_successfully"> Tagged Successfully</string>
    <string name="toast_no_img_found">No Image Found</string>
    <string name="hq_sel">HeadQuarter Selection</string>
    <string name="presentation">Presentation</string>
    <string name="presentation_saved_already">Presentation name already exists. Please change the name and try again </string>
    <string name="create_presentation">Create Presentation</string>
    <string name="enter_presentation_name">Enter the Presentation name</string>
    <string name="title_activity_create_presentation">CreatePresentation</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tag">Tag</string>
    <string name="approvals">Approvals</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="speciality">Speciality</string>
    <string name="pending">Pending</string>
    <string name="territory">Territory</string>
    <string name="class_filter">Class</string>
    <string name="promoted">Promoted</string>
    <string name="fb_selection">Feedback Selection</string>
    <string name="jw_selction">JointWork Selection</string>
    <string name="ok">Ok</string>
    <string name="toast_do_master_sync">Kindly do Master Sync</string>
    <string name="leave_approvals">Leave Approvals</string>
    <string name="tp_approvals">Tour Plan Approvals</string>
    <string name="emp_code">Emp Code</string>
    <string name="designation">Designation</string>
    <string name="leave_type">Leave Type</string>
    <string name="from"> From </string>
    <string name="to"> To </string>
    <string name="no_of_days">No of days</string>
    <string name="add_on_leave">Address on Leave</string>
    <string name="reason">Reason</string>
    <string name="approve">Approve</string>
    <string name="reject_reason">Reject Reason</string>
    <string name="tp_deviation">Tp Deviation</string>
    <string name="session_1">Session 1</string>
    <string name="cluster">Cluster</string>
    <string name="hq">HQ</string>
    <string name="deviation_remarks">Deviation Remarks</string>
    <string name="dcr_approvals">DCR Approvals</string>
    <string name="activity_date">Activity date</string>
    <string name="submitted_date">Submitted date</string>
    <string name="all">All</string>
    <string name="txt_hospital">Hospital</string>
    <string name="visit_time">Visit Time</string>
    <string name="modified_time">Modified Time</string>
    <string name="detailed_prd">Detailed Product</string>
    <string name="sample_prds">Sample Products</string>
    <string name="additional_call">Additional Calls</string>
    <string name="no_remarks">No Remarks</string>
    <string name="no_feedback">No Feedback</string>
    <string name="no_cluster">No Cluster</string>
    <string name="no_select_date">Not Select Date</string>
    <string name="select_from_date">Select From Date</string>
    <string name="toast_response_failed">Response Failed! Please Try Again</string>
    <string name="access_denied">Access Denied! Contact Administrator</string>
    <string name="login_successfully">Login successfully!</string>
    <string name="tag_failed">Tag Failed! Try Again</string>
    <string name="no_jw">No JointWork</string>
    <string name="back">Back</string>
    <string name="geo_tagging">Geo Tagging</string>
    <string name="address">Address</string>
    <string name="yet_to_add_rcpa">Yet to add RCPA</string>
    <string name="no_records_avail">No Records Available</string>
    <string name="competitor_product">Competitor Product</string>
    <string name="clear">Clear</string>
    <string name="comp_prd">Competitor Product</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_homeadd">Enter Home Address</string>
    <string name="enter_hospadd">Enter Hospital Address</string>
    <string name="ent_brand_name">Enter Brand Name</string>
    <string name="tour_plan_approvals">Tour Plan Approvals</string>
    <string name="tp_planed_for">Tour Planned for</string>
    <string name="total_planed_days">Total Planned days</string>
    <string name="total_planed_count">Total Planned count</string>
    <string name="week_off_days_holidays">Week Off days / Holidays</string>
    <string name="total">Total</string>
    <string name="view_actual_plan">View Actual Plan</string>
    <string name="worktype">Work Type</string>
    <string name="other_wt">Other WorkType</string>
    <string name="toast_enter_reason_for_reject">Enter reason for Reject</string>
    <string name="toast_enter_remarks">Enter Remarks</string>
    <string name="toast_enter_feedback">Enter Feedback</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="apply">Apply</string>
    <string name="headquarter">Headquarter</string>
    <string name="my_resource">My Resource</string>
    <string name="description">Description</string>
    <string name="chemist_selection">Chemist Selection</string>
    <string name="product_selection">Product Selection</string>
    <string name="ent_company_name">Enter Brand Name</string>
    <string name="comp_company">Competitor Company</string>
    <string name="input_selection">Input Selection</string>
    <string name="add_prd_inp"><![CDATA[Add Product & Input]]></string>
    <string name="product">Product</string>
    <string name="products">Products</string>
    <string name="select_overall_feedback">Select Overall Feedback</string>
    <string name="enter_overall_remark">Enter Overall Remarks</string>
    <string name="select_chemist_name">Select Chemist Name</string>
    <string name="select_chemist">Select Chemist</string>
    <string name="tour_plan">Tour Plan</string>
    <string name="leave_application">Leave Application</string>
    <string name="reports">Reports</string>
    <string name="activity">Activity</string>
    <string name="near_me">Near Me</string>
    <string name="quiz">Quiz</string>
    <string name="survey">Survey</string>
    <string name="forms">Forms</string>
    <string name="remainder_call">Remainder Call</string>
    <string name="refresh">Refresh</string>
    <string name="additional_doctor">Add Unlisted Doctor</string>
    <string name="mobile">Mobile </string>
    <string name="catogy">Category</string>
    <string name="phone">Phone</string>
    <string name="qualifications">Qualification</string>
    <string name="clases">Class</string>
    <string name="docnm">Doctor Name</string>
    <string name="addrss">Address</string>
    <string name="select_the_territory">Select the Territory</string>
    <string name="sv_prsn">Save</string>
    <string name="sclt_qualy">Select Qualification</string>
    <string name="select_the_category">Select the Category</string>
    <string name="hospital">Hospital</string>
    <string name="sclt_class">Select Class</string>
    <string name="sclt_spcl">Select Speciality</string>
    <string name="pincode">Pincode</string>
</resources>