<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_home"
            android:fontFamily="@font/satoshi_medium"
            android:icon="@drawable/activity"
            android:textSize="@dimen/_7sdp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_refresh"
            android:fontFamily="@font/satoshi_medium"
            android:icon="@drawable/refresh"
            android:textSize="@dimen/_7sdp"
            android:title="@string/refresh" />

        <item
            android:id="@+id/nav_presentation"
            android:fontFamily="@font/satoshi_medium"
            android:icon="@drawable/presentation"
            android:textSize="@dimen/_7sdp"
            android:title="@string/presentation" />
        <item
            android:id="@+id/nav_tour_plan"
            android:fontFamily="@font/satoshi_medium"
            android:icon="@drawable/calendar_clock"
            android:textSize="@dimen/_1sdp"
            android:title="@string/tour_plan" />

        <item
            android:id="@+id/nav_myresource"
            android:fontFamily="@font/satoshi_medium"
            android:icon="@drawable/leave"
            android:textSize="@dimen/_7sdp"
            android:title="@string/my_resource" />

        <item
            android:id="@+id/nav_leave_appln"
            android:fontFamily="@font/satoshi_medium"
            android:icon="@drawable/leave"
            android:textSize="@dimen/_7sdp"
            android:title="@string/leave_application" />

        <item
            android:id="@+id/nav_reports"
            android:fontFamily="@font/satoshi_medium"
            android:icon="@drawable/report"
            android:textSize="@dimen/_7sdp"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_activity"
            android:fontFamily="@font/satoshi_medium"
            android:icon="@drawable/activity"
            android:textSize="@dimen/_7sdp"
            android:title="@string/activity"
            android:visible="false" />
        <item
            android:id="@+id/nav_nearme"
            android:fontFamily="@font/satoshi_medium"
            android:icon="@drawable/nearme"
            android:textSize="@dimen/_7sdp"
            android:title="@string/near_me" />

        <item
            android:id="@+id/nav_survey"
            android:fontFamily="@font/satoshi_medium"
            android:icon="@drawable/survey"
            android:textSize="@dimen/_7sdp"
            android:title="@string/survey" />
        <item
            android:id="@+id/nav_quiz"
            android:fontFamily="@font/satoshi_medium"
            android:icon="@drawable/quiz"
            android:textSize="@dimen/_7sdp"
            android:title="Quiz" />

        <item
            android:id="@+id/nav_forms"
            android:fontFamily="@font/satoshi_medium"
            android:icon="@drawable/form"
            android:textSize="@dimen/_7sdp"
            android:title="@string/forms" />

    </group>

</menu>
