<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDADA">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fd4f6e"
        android:id="@+id/rlay_tool">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_doctor"
            android:padding="12dp"
            android:id="@+id/drtagname"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_close_24"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="8dp"
            android:id="@+id/img_close"/>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlay_tool">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlay_tool"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/docnm"
                android:layout_marginTop="15dp"
                android:textColor="#000000"
                android:id="@+id/txt_dr"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_white_grey"
                android:padding="5dp"
                android:layout_below="@+id/txt_dr"
                android:layout_marginTop="5dp"
                android:textColor="#000000"
                android:id="@+id/edt_dr" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_dr"
                android:weightSum="2"
                android:orientation="horizontal"
                android:id="@+id/ll_spin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/qualifications"
                            android:layout_marginTop="15dp"
                            android:textColor="#ff0000"
                            android:id="@+id/txt_qua" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:id="@+id/txt_select_qua"
                            android:padding="8dp"
                            android:textColor="#000000"
                            android:hint="@string/sclt_qualy"
                            android:textColorHint="#000000"
                            android:background="@drawable/shape_white_grey"
                            android:layout_below="@+id/txt_qua" />
                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_marginTop="22dp"
                            android:src="@drawable/spin_down_arrow"
                            android:layout_alignParentEnd="true"
                            android:layout_marginRight="8dp"
                            android:layout_below="@+id/txt_qua"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/catogy"
                            android:layout_marginTop="10dp"
                            android:textColor="#ff0000"
                            android:id="@+id/txt_category"
                            android:layout_below="@+id/txt_select_qua" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/select_the_category"
                            android:textColorHint="#000000"
                            android:layout_marginTop="10dp"
                            android:textColor="#000000"
                            android:id="@+id/txt_select_category"
                            android:padding="8dp"
                            android:background="@drawable/shape_white_grey"
                            android:layout_below="@+id/txt_category" />
                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_marginTop="22dp"
                            android:src="@drawable/spin_down_arrow"
                            android:layout_alignParentEnd="true"
                            android:layout_marginRight="8dp"
                            android:layout_below="@+id/txt_category"/>
                        <RelativeLayout
                            android:visibility="gone"
                            android:id="@+id/lnhosdropdown"
                            android:layout_below="@+id/txt_select_category"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hospital"
                                android:layout_marginTop="10dp"
                                android:textColor="#ff0000"
                                android:id="@+id/txt_hospitals" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Select the Hospital"
                                android:textColorHint="#000000"
                                android:layout_marginTop="10dp"
                                android:textColor="#000000"
                                android:id="@+id/txt_select_hospitals"
                                android:padding="8dp"
                                android:background="@drawable/shape_white_grey"
                                android:layout_below="@+id/txt_hospitals" />
                            <ImageView
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:layout_marginTop="22dp"
                                android:src="@drawable/spin_down_arrow"
                                android:layout_alignParentEnd="true"
                                android:layout_marginRight="8dp"
                                android:layout_below="@+id/txt_hospitals"/>
                        </RelativeLayout>
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/clases"
                            android:layout_marginTop="15dp"
                            android:textColor="#ff0000"
                            android:id="@+id/txt_class" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sclt_class"
                            android:textColorHint="#000000"
                            android:layout_marginTop="10dp"
                            android:textColor="#000000"
                            android:id="@+id/txt_select_class"
                            android:padding="8dp"
                            android:background="@drawable/shape_white_grey"
                            android:layout_below="@+id/txt_class" />
                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_marginTop="22dp"
                            android:src="@drawable/spin_down_arrow"
                            android:layout_alignParentEnd="true"
                            android:layout_marginRight="8dp"
                            android:layout_below="@+id/txt_class"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/speciality"
                            android:layout_marginTop="10dp"
                            android:textColor="#ff0000"
                            android:id="@+id/txt_spec"
                            android:layout_below="@+id/txt_select_class" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sclt_spcl"
                            android:layout_marginTop="10dp"
                            android:textColor="#000000"
                            android:textColorHint="#000000"
                            android:id="@+id/txt_select_spec"
                            android:padding="8dp"
                            android:background="@drawable/shape_white_grey"
                            android:layout_below="@+id/txt_spec" />
                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_marginTop="22dp"
                            android:src="@drawable/spin_down_arrow"
                            android:layout_alignParentEnd="true"
                            android:layout_marginRight="8dp"
                            android:layout_below="@+id/txt_spec"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addrss"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:id="@+id/txt_addr"
                android:layout_below="@+id/ll_spin"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_white_grey"
                android:layout_below="@+id/txt_addr"
                android:id="@+id/edt_addr"
                android:textColor="#000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_addr"
                android:weightSum="2"
                android:orientation="horizontal"
                android:id="@+id/ll_btm_spin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/territory"
                            android:layout_marginTop="15dp"
                            android:textColor="#ff0000"
                            android:id="@+id/txt_terr" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/select_the_territory"
                            android:textColorHint="#000000"
                            android:layout_marginTop="10dp"
                            android:textColor="#000000"
                            android:id="@+id/txt_select_terr"
                            android:padding="8dp"
                            android:background="@drawable/shape_white_grey"
                            android:layout_below="@+id/txt_terr" />
                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:layout_marginTop="22dp"
                            android:src="@drawable/spin_down_arrow"
                            android:layout_alignParentEnd="true"
                            android:layout_marginRight="8dp"
                            android:layout_below="@+id/txt_terr"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:layout_marginTop="10dp"
                            android:textColor="#000000"
                            android:id="@+id/txt_phone"
                            android:layout_below="@+id/txt_select_terr" />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColor="#000000"
                            android:id="@+id/edt_phone"
                            android:padding="5dp"
                            android:maxLength="10"
                            android:inputType="number"
                            android:background="@drawable/shape_white_grey"
                            android:layout_below="@+id/txt_phone" />
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pincode"
                            android:layout_marginTop="15dp"
                            android:textColor="#000000"
                            android:id="@+id/txt_code" />
                        <EditText
                            android:id="@+id/edt_code"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txt_code"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/shape_white_grey"
                            android:inputType="number"
                            android:maxLength="6"
                            android:padding="5dp"
                            android:textColor="#000000" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mobile"
                            android:layout_marginTop="10dp"
                            android:textColor="#000000"
                            android:id="@+id/txt_mob"
                            android:layout_below="@+id/edt_code" />
                        <EditText
                            android:id="@+id/edt_mob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txt_mob"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/shape_white_grey"
                            android:inputType="number"
                            android:maxLength="12"
                            android:padding="5dp"
                            android:textColor="#000000" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:text="@string/sv_prsn"
                android:background="#0427A8"
                android:layout_below="@+id/ll_btm_spin"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:id="@+id/btn_save" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>